# modal-mcp-toolbox

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/: publish.yml
src/mcp_modal_sandbox/: __init__.py  __main__.py  server.py
src/modal_mcp_toolbox/: __init__.py  flux.py  modal_cli.py
