[project]
name = "mcp-modal-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.1",
    "modal>=0.73.43",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = []


[project.scripts]
mcp-modal-sandbox = "mcp_modal_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"